--- a/index.html
+++ b/index.html
@@ -5,9 +5,78 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.min.css" type="text/css">
     <title>Sample</title>
 </head>
 <body>
-    
+    <!-- Hero section start-->
+    <header class="container pb-5 px-lg-3 px-sm-0 hero position-relative">          
+        <!-- Nav -->  
+        <nav class="navbar navbar-expand-md navbar-light bg-transparent sticky-top p-3">                
+            <a class="navbar-brand" href="#">
+                <img src="img/sample-logo.png" alt="logo">
+            </a>
+            <button class="navbar-toggler justify-content-end" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarText">
+                <ul class="navbar-nav mb-2 mb-lg-0">
+                    <li class="nav-item align-middle">
+                        <a class="nav-link" href="#"><small>SUPPORT</small></a>
+                    </li>
+                    <li class="nav-item align-middle">
+                        <button type="button" class="btn btn-sm btn-secondary rounded-pill px-3">LOG IN</button>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <div class="col-lg-6 col-sm-12 px-3 position-absolute top-50">
+            <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit</h1>
+            <h4>aliquam et amet pariatur distinctio quia laboriosam placeat 
+                dolor maxime laborum dolorem quo.</h4>
+            <ul>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit</li> 
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit</li> 
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit</li> 
+            </ul>
+            <section>
+                <button class="btn btn-danger rounded-pill mr-5"><small>MAIN CTA BUTTON</small></button>
+                <button class="btn btn-secondary rounded-pill"><small>LEARN MORE</small></button>
+            </section>
+        </div>
+    </header>
+    <!-- Hero section end-->
+    <div class="container">
+        <nav class="navbar navbar-expand-md navbar-light bg-transparent p-3">                
+            <a class="navbar-brand" href="#">
+                <img src="img/sample-logo.png" alt="logo" class="sub-logo">
+            </a>
+            <div class="navbar-collapse justify-content-end">
+                <ul class="navbar-nav mb-2 mb-lg-0">
+                    <li class="nav-item align-middle">
+                        <a class="nav-link" href="#"><small>Overview</small></a>
+                    </li>
+                    <li class="nav-item align-middle">
+                        <a class="nav-link" href="#"><small>One-on-One</small></a>
+                    </li>
+                    <li class="nav-item align-middle">
+                        <a class="nav-link" href="#"><small>Testimonials</small></a>
+                    </li>
+                    <li class="nav-item align-middle">
+                        <a class="nav-link" href="#"><small>More</small></a>
+                    </li>
+                    <li class="nav-item align-middle">
+                        <button type="button" class="btn btn-sm btn-danger rounded-pill px-3">MAIN CTA BUTTON</button>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </div>
+
+
+    <footer>
+
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
