first content update

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inria+Serif:wght@300;400&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.min.css" type="text/css">
     <title>Sample</title>
@@ -46,6 +49,7 @@
         </div>
     </header>
     <!-- Hero section end-->
+    <!-- sub nav -->
     <div class="container">
         <nav class="navbar navbar-expand-md navbar-light bg-transparent p-3">                
             <a class="navbar-brand" href="#">
@@ -66,12 +70,67 @@
                         <a class="nav-link" href="#"><small>More</small></a>
                     </li>
                     <li class="nav-item align-middle">
-                        <button type="button" class="btn btn-sm btn-danger rounded-pill px-3">MAIN CTA BUTTON</button>
+                        <button type="button" class="btn btn-sm btn-danger rounded-pill px-3"><small>MAIN CTA BUTTON</small></button>
                     </li>
                 </ul>
             </div>
         </nav>
     </div>
+    <!-- sub nav end-->
+    <!-- first content start -->
+    <div class="container row justify-content-between mx-auto border-top pt-5">
+        <div class="col-lg-6 col-sm-12">
+            <h6>Lorem ipsum dolor</h6>
+            <h4>Learn what you need to know</h4>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Laboriosam voluptas error excepturi, deserunt aspernatur, 
+                ullam velit sit odit at quasi repellat harum suscipit, minima 
+                consequuntur in debitis provident consequatur non?
+            </p>
+        </div>
+        <div class="col-lg-6 col-sm-12 content-pic">
+            <img src="img/first-contents1.png" alt="" class="img-fluid">
+        </div>
+    </div>
+
+    <div class="container row justify-content-between mx-auto pt-5">
+        <div class="col-lg-6 col-sm-12 content-pic">
+            <img src="img/first-contents2.png" alt="" class="img-fluid">
+        </div>
+        <div class="col-lg-6 col-sm-12">
+            <h6>Lorem ipsum dolor</h6>
+            <h4>Class aptent taciti sociousqe</h4>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Laboriosam voluptas error excepturi, deserunt aspernatur, 
+                ullam velit sit odit at quasi repellat harum suscipit, minima 
+                consequuntur in debitis provident consequatur non?
+            </p>
+        </div>
+    </div>
+
+    <div class="container row justify-content-between mx-auto py-5">
+        <div class="col-lg-6 col-sm-12">
+            <h6>Lorem ipsum dolor</h6>
+            <h4>Learn what you need to know</h4>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Laboriosam voluptas error excepturi, deserunt aspernatur, 
+                ullam velit sit odit at quasi repellat harum suscipit, minima 
+                consequuntur in debitis provident consequatur non?
+            </p>
+        </div>
+        <div class="col-lg-6 col-sm-12 content-pic">
+            <img src="img/first-contents3.png" alt="" class="img-fluid">
+        </div>
+    </div>
+    <!-- first content end -->
+
+    <!-- second content start -->
+    <div class="container row justify-content-between mx-auto border-top pt-5">
+    </div>
+    <!-- second content end -->
 
 
     <footer>
