testimonials section update

--- a/index.html
+++ b/index.html
@@ -127,11 +127,114 @@
     </div>
     <!-- first content end -->
 
-    <!-- second content start -->
+    <!-- One-on-One start -->
     <div class="container row justify-content-between mx-auto border-top pt-5">
-    </div>
-    <!-- second content end -->
+        <h2 class="text-center my-5">One-on-One</h2>
 
+        <div class="card my-3 border-0 col-lg-5 col-sm-12">
+            <div class="row g-3">
+                <div class="col-md-8">
+                    <div class="card-body px-0">
+                        <p class="card-text"><small class="red">Conversational format</small></p>
+                        <h5 class="card-title">Dialogue with a tutor</h5>
+                        <p class="card-text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore et, laudantium quia,
+                            beatae dolor sint repellendus quae libero, rerum corporis minus sit eum unde molestias
+                            earum voluptas reprehenderit. Harum, maxime.
+                        </p>
+                    </div>
+              </div>
+              <div class="col-md-4">
+                <img src="img/second-contents1.png" class="img-fluid" alt="...">
+              </div>
+            </div>
+          </div>
+          
+          <div class="card my-3 border-0 col-lg-5 col-sm-12">
+            <div class="row g-3">
+                <div class="col-md-8">
+                    <div class="card-body px-0">
+                        <p class="card-text"><small class="red">One-to-one tutor sessions</small></p>
+                        <h5 class="card-title">Personalized support</h5>
+                        <p class="card-text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore et, laudantium quia,
+                            beatae dolor sint repellendus quae libero, rerum corporis minus sit eum unde molestias
+                            earum voluptas reprehenderit. Harum, maxime.
+                        </p>
+                    </div>
+              </div>
+              <div class="col-md-4">
+                <img src="img/second-contents2.png" class="img-fluid" alt="...">
+              </div>
+            </div>
+          </div>
+          <div class="card my-3 border-0 col-lg-5 col-sm-12">
+            <div class="row g-3">
+                <div class="col-md-8">
+                    <div class="card-body px-0">
+                        <p class="card-text"><small class="red">Dashboard</small></p>
+                        <h5 class="card-title">Keep track of your progress</h5>
+                        <p class="card-text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore et, laudantium quia,
+                            beatae dolor sint repellendus quae libero, rerum corporis minus sit eum unde molestias
+                            earum voluptas reprehenderit. Harum, maxime.
+                        </p>
+                    </div>
+              </div>
+              <div class="col-md-4">
+                <img src="img/second-contents3.png" class="img-fluid" alt="...">
+              </div>
+            </div>
+          </div>
+          
+          <div class="card my-3 border-0 col-lg-5 col-sm-12">
+            <div class="row g-3">
+                <div class="col-md-8">
+                    <div class="card-body px-0">
+                        <p class="card-text"><small class="red">Ask a tutor</small></p>
+                        <h5 class="card-title">Get answers from the experts</h5>
+                        <p class="card-text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore et, laudantium quia,
+                            beatae dolor sint repellendus quae libero, rerum corporis minus sit eum unde molestias
+                            earum voluptas reprehenderit. Harum, maxime.
+                        </p>
+                    </div>
+              </div>
+              <div class="col-md-4">
+                <img src="img/second-contents4.png" class="img-fluid" alt="...">
+              </div>
+            </div>
+          </div>
+    </div>
+    <!-- One-on-One end -->
+
+    <!-- Testimonial start -->
+    <div class="container row justify-content-between mx-auto border-top pt-5">
+        <h2 class="text-center my-5">Testimonials</h2>
+
+        <div class="card border-0 col-lg-4 col-sm-12">
+            <img src="img/testimonials.jpeg" class="card-img-top" alt="...">
+            <div class="card-body text-center">
+              <h5 class="card-title">"Lorem ipsum dolor sit amet"</h5>
+              <p class="card-text"><small class="text-muted">Joohn Doe USA 740 GMAT</small></p>
+            </div>
+        </div>
+        <div class="card border-0 col-lg-4 col-sm-12">
+            <img src="img/testimonials.jpeg" class="card-img-top" alt="...">
+            <div class="card-body text-center">
+              <h5 class="card-title">"Lorem ipsum dolor sit amet"</h5>
+              <p class="card-text"><small class="text-muted">Joohn Doe USA 740 GMAT</small></p>
+            </div>
+        </div>
+        <div class="card border-0 col-lg-4 col-sm-12">
+            <img src="img/testimonials.jpeg" class="card-img-top" alt="...">
+            <div class="card-body text-center">
+              <h5 class="card-title">"Lorem ipsum dolor sit amet"</h5>
+              <p class="card-text"><small class="text-muted">Joohn Doe USA 740 GMAT</small></p>
+            </div>
+        </div>
+    </div>
+    <!-- Testimonial end -->
 
     <footer>
 
