--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     <!-- first content end -->
 
     <!-- One-on-One start -->
-    <div class="container row justify-content-between mx-auto border-top pt-5">
+    <div class="container row justify-content-between mx-auto border-top py-5">
         <h2 class="text-center my-5">One-on-One</h2>
 
         <div class="card my-3 border-0 col-lg-5 col-sm-12">
@@ -209,7 +209,7 @@
     <!-- One-on-One end -->
 
     <!-- Testimonial start -->
-    <div class="container row justify-content-between mx-auto border-top pt-5">
+    <div class="container row justify-content-between mx-auto border-top py-5">
         <h2 class="text-center my-5">Testimonials</h2>
 
         <div class="card border-0 col-lg-4 col-sm-12">
@@ -236,8 +236,65 @@
     </div>
     <!-- Testimonial end -->
 
-    <footer>
+    <!-- There's more section start -->
+    <div class="container row justify-content-between mx-auto border-top pt-5">
+        <h2 class="text-center my-5">Wait, there's more!</h2>
+        <div class="col-lg-6 col-sm-12">
+            <h6>Lorem ipsum dolor</h6>
+            <h4>Learn what you need to know</h4>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Laboriosam voluptas error excepturi, deserunt aspernatur, 
+                ullam velit sit odit at quasi repellat harum suscipit, minima 
+                consequuntur in debitis provident consequatur non?
+            </p>
+        </div>
+        <div class="col-lg-6 col-sm-12 content-pic">
+            <img src="img/first-contents1.png" alt="" class="img-fluid">
+        </div>
+    </div>
 
+    <div class="container row justify-content-between mx-auto pt-5">
+        <div class="col-lg-6 col-sm-12 content-pic">
+            <img src="img/first-contents2.png" alt="" class="img-fluid">
+        </div>
+        <div class="col-lg-6 col-sm-12">
+            <h6>Lorem ipsum dolor</h6>
+            <h4>Class aptent taciti sociousqe</h4>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Laboriosam voluptas error excepturi, deserunt aspernatur, 
+                ullam velit sit odit at quasi repellat harum suscipit, minima 
+                consequuntur in debitis provident consequatur non?
+            </p>
+        </div>
+    </div>
+
+    <div class="container row justify-content-between mx-auto py-5">
+        <div class="col-lg-6 col-sm-12">
+            <h6>Lorem ipsum dolor</h6>
+            <h4>Learn what you need to know</h4>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Laboriosam voluptas error excepturi, deserunt aspernatur, 
+                ullam velit sit odit at quasi repellat harum suscipit, minima 
+                consequuntur in debitis provident consequatur non?
+            </p>
+        </div>
+        <div class="col-lg-6 col-sm-12 content-pic">
+            <img src="img/first-contents3.png" alt="" class="img-fluid">
+        </div>
+    </div>
+    <!-- There's more section end -->
+
+    <!-- Trial button section start -->
+    <div class="container col-12 text-center border-top py-5">
+        <button class="btn btn-danger rounded-pill py-3 px-4"><small>IT'S A REALLY BIG CTA</small></button>
+        <p class="mt-3"><small>Try it free for 7days with no commitment</small></p>
+    </div>
+    <!-- Trial button section end -->
+    <footer class="bg-secondary py-5">
+        <p class="text-white text-center"><small>FOOTER MATERIAL</small></p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
