icon pic updated

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
     <div class="container row justify-content-between mx-auto border-top pt-5">
         <h2 class="text-center my-5">Wait, there's more!</h2>
         <div class="col-lg-6 col-sm-12">
-            <h6>Lorem ipsum dolor</h6>
+            <h6>Learn anywhere</h6>
             <h4>Learn what you need to know</h4>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. 
@@ -250,16 +250,16 @@
             </p>
         </div>
         <div class="col-lg-6 col-sm-12 content-pic">
-            <img src="img/first-contents1.png" alt="" class="img-fluid">
+            <img src="img/responsive.png" alt="" class="img-fluid">
         </div>
     </div>
 
     <div class="container row justify-content-between mx-auto pt-5">
         <div class="col-lg-6 col-sm-12 content-pic">
-            <img src="img/first-contents2.png" alt="" class="img-fluid">
+            <img src="img/timer.png" alt="" class="img-fluid">
         </div>
         <div class="col-lg-6 col-sm-12">
-            <h6>Lorem ipsum dolor</h6>
+            <h6>Practice exams</h6>
             <h4>Class aptent taciti sociousqe</h4>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. 
@@ -272,7 +272,7 @@
 
     <div class="container row justify-content-between mx-auto py-5">
         <div class="col-lg-6 col-sm-12">
-            <h6>Lorem ipsum dolor</h6>
+            <h6>progress report</h6>
             <h4>Learn what you need to know</h4>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. 
@@ -282,7 +282,7 @@
             </p>
         </div>
         <div class="col-lg-6 col-sm-12 content-pic">
-            <img src="img/first-contents3.png" alt="" class="img-fluid">
+            <img src="img/second-contents3.png" alt="" class="img-fluid">
         </div>
     </div>
     <!-- There's more section end -->
