added flex-wrap-reverse on some parts for smartphone layout

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Hero section start-->
     <header class="container pb-5 px-lg-3 px-sm-0 hero position-relative">          
         <!-- Nav -->  
-        <nav class="navbar navbar-expand-md navbar-light bg-transparent sticky-top p-3">                
+        <nav class="navbar navbar-expand-md navbar-light bg-transparent p-3">                
             <a class="navbar-brand" href="#">
                 <img src="img/sample-logo.png" alt="logo">
             </a>
@@ -23,11 +23,11 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarText">
-                <ul class="navbar-nav mb-2 mb-lg-0">
-                    <li class="nav-item align-middle">
+                <ul class="navbar-nav mb-2 mb-lg-0 d-flex align-items-center">
+                    <li class="nav-item">
                         <a class="nav-link" href="#"><small>SUPPORT</small></a>
                     </li>
-                    <li class="nav-item align-middle">
+                    <li class="nav-item">
                         <button type="button" class="btn btn-sm btn-secondary rounded-pill px-3">LOG IN</button>
                     </li>
                 </ul>
@@ -51,25 +51,25 @@
     <!-- Hero section end-->
     <!-- sub nav -->
     <div class="container">
-        <nav class="navbar navbar-expand-md navbar-light bg-transparent p-3">                
+        <nav class="navbar navbar-expand-md navbar-light p-3">                
             <a class="navbar-brand" href="#">
                 <img src="img/sample-logo.png" alt="logo" class="sub-logo">
             </a>
             <div class="navbar-collapse justify-content-end">
-                <ul class="navbar-nav mb-2 mb-lg-0">
-                    <li class="nav-item align-middle">
+                <ul class="navbar-nav mb-2 mb-lg-0 d-flex align-items-center">
+                    <li class="nav-item">
                         <a class="nav-link" href="#"><small>Overview</small></a>
                     </li>
-                    <li class="nav-item align-middle">
+                    <li class="nav-item">
                         <a class="nav-link" href="#"><small>One-on-One</small></a>
                     </li>
-                    <li class="nav-item align-middle">
+                    <li class="nav-item">
                         <a class="nav-link" href="#"><small>Testimonials</small></a>
                     </li>
-                    <li class="nav-item align-middle">
+                    <li class="nav-item">
                         <a class="nav-link" href="#"><small>More</small></a>
                     </li>
-                    <li class="nav-item align-middle">
+                    <li class="nav-item">
                         <button type="button" class="btn btn-sm btn-danger rounded-pill px-3"><small>MAIN CTA BUTTON</small></button>
                     </li>
                 </ul>
@@ -94,7 +94,7 @@
         </div>
     </div>
 
-    <div class="container row justify-content-between mx-auto pt-5">
+    <div class="container row justify-content-between mx-auto pt-5 flex-wrap-reverse">
         <div class="col-lg-6 col-sm-12 content-pic">
             <img src="img/first-contents2.png" alt="" class="img-fluid">
         </div>
@@ -216,21 +216,21 @@
             <img src="img/testimonials.jpeg" class="card-img-top" alt="...">
             <div class="card-body text-center">
               <h5 class="card-title">"Lorem ipsum dolor sit amet"</h5>
-              <p class="card-text"><small class="text-muted">Joohn Doe USA 740 GMAT</small></p>
+              <p class="card-text"><small class="text-muted">John Doe USA 740 GMAT</small></p>
             </div>
         </div>
         <div class="card border-0 col-lg-4 col-sm-12">
             <img src="img/testimonials.jpeg" class="card-img-top" alt="...">
             <div class="card-body text-center">
               <h5 class="card-title">"Lorem ipsum dolor sit amet"</h5>
-              <p class="card-text"><small class="text-muted">Joohn Doe USA 740 GMAT</small></p>
+              <p class="card-text"><small class="text-muted">John Doe USA 740 GMAT</small></p>
             </div>
         </div>
         <div class="card border-0 col-lg-4 col-sm-12">
             <img src="img/testimonials.jpeg" class="card-img-top" alt="...">
             <div class="card-body text-center">
               <h5 class="card-title">"Lorem ipsum dolor sit amet"</h5>
-              <p class="card-text"><small class="text-muted">Joohn Doe USA 740 GMAT</small></p>
+              <p class="card-text"><small class="text-muted">John Doe USA 740 GMAT</small></p>
             </div>
         </div>
     </div>
@@ -254,7 +254,7 @@
         </div>
     </div>
 
-    <div class="container row justify-content-between mx-auto pt-5">
+    <div class="container row justify-content-between mx-auto pt-5 flex-wrap-reverse">
         <div class="col-lg-6 col-sm-12 content-pic">
             <img src="img/timer.png" alt="" class="img-fluid">
         </div>
